remove unnecessary event handling interfaces
enforce dependencies context -> context.domain

fix checkstyle

repackage back to single domain package

name changes

replace moneta with custom currency and money

ditch unnecessary command id

move back to pipelinr

rename middleware to pipeline

refactor event bus

renaming and reformatting

restructure

from junit to spock

from junit to spock

please errorprone

repackage yoyo

modularize step 1

make the app runnable

pushing soon

simplifying build

nicify gradle

simpler scripts

simpler scripts